<resources>
    <string name="app_name" translatable="false">Bank card info</string>

    <!-- activity_main.xml -->
    <string name="tabLayoutDescription">Current tab</string>
    <string name="currentCardFragmentTitle">Current card</string>
    <string name="savedCardsFragmentTitle">Local saved cards</string>

    <!-- current_card_fragment.xml -->
    <string name="binLabel">BIN number of bank card</string>
    <string name="binInputHint">Bank card number</string>
    <string name="binInputHelper">The first 4–8 digits of the bank card</string>
    <string name="binErrorMessage">The entered value is not a bank card number</string>
    <string name="clearInputButtonText">Clear input</string>
    <string name="searchCardButtonText">Search card</string>
    <string name="saveCardButtonText">Save card</string>
    <string name="currentCardInfoLabel">Information about current card</string>
    <string name="successfullyFoundedStatus">Card founded!</string>
    <string name="notFoundedStatus">Card not founded!</string>
    <string name="successfullySavedStatus">The card has been saved successfully!</string>

    <!-- Errors -->
    <string name="http400Error">Error: bad request</string>
    <string name="http401Error">Error: unauthorized request</string>
    <string name="http403Error">Error: forbidden request</string>
    <string name="http429Error">Error: the limit of requests to the service has been exceeded</string>
    <string name="http500Error">Error: internal service error</string>
    <string name="http502Error">Error: bad gateway</string>
    <string name="http503Error">Error: service unavailable</string>
    <string name="http504Error">Error: gateway timeout</string>
    <string name="httpOtherError">Error: problem occurred with http connection. Error message: %1$s</string>
    <string name="invalidResponseError">Error: invalid response</string>
    <string name="networkError">Error: problem occurred with network connection. Error message: %1$s</string>
    <string name="otherError">Error: %1$s</string>

    <!-- saved_cards_fragment.xml -->
    <string name="savedCardsTitle">Local saved bank cards</string>
    <string name="removeAllCards">Remove all local saved cards</string>
    <string name="warningTitle">Confirm your actions</string>
    <string name="warningMessage">Are you sure to want remove all saved cards?</string>
    <string name="confirmRemoving">Remove</string>
    <string name="cancelRemoving">Cancel</string>
    <string name="successfullyRemovedAllCards">All local saved cards have been removed successfully!</string>

    <!-- card_info.xml -->
    <string name="unknown" translatable="false">\?</string>
    <string name="binNumberLabel">BIN number</string>
    <string name="schemeLabel">Scheme / Network</string>
    <string name="typeLabel">Type</string>
    <string name="debit">&lt;b>Debit&lt;/b></string>
    <string name="credit">&lt;b>Credit&lt;/b></string>
    <string name="unknownType">Unknown</string>
    <string name="bankLabel">Bank</string>
    <string name="bankName">Name: &lt;b>%1$s&lt;/b></string>
    <string name="bankCity">City: &lt;b>%1$s&lt;/b></string>
    <string name="brandLabel">Brand</string>
    <string name="prepaidLabel">Prepaid</string>
    <string name="yes">&lt;b>Yes&lt;/b></string>
    <string name="no">&lt;b>No&lt;/b></string>
    <string name="unknownAnswer">Unknown</string>
    <string name="cardNumberLabel">Card number</string>
    <string name="lengthLabel">Length</string>
    <string name="luhnLabel" translatable="false">Luhn</string>
    <string name="countryLabel">Country</string>
    <string name="countryIconAndName" translatable="false">%1$s %2$s</string>
    <string name="countryCoordinates">(latitude: &lt;b>%1$s&lt;/b>, longitude: &lt;b>%2$s&lt;/b>)</string>
    <string name="countryNumber">Number: &lt;b>%1$s&lt;/b></string>
    <string name="countryShortcut">Shortcut: &lt;b>%1$s&lt;/b></string>
    <string name="countryCurrency">Currency: &lt;b>%1$s&lt;/b></string>
</resources>
