<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_marginBottom="@dimen/marginBetweenRows"
        android:weightSum="3">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schemeLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="Mir" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/debit" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bankLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bankName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Name: Tinkoff" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bankCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="City: Moscow" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bankUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="www.tinkoff.ru"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bankPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                tools:text="8 800 555-777-8"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_marginBottom="@dimen/marginBetweenRows"
        android:weightSum="3">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brandLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="Visa/Dankort" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaidLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/yes" />
        </LinearLayout>
    </TableRow>

    <TableRow android:weightSum="3">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cardNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/cardNumberLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardNumberLabel"
                android:text="@string/lengthLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/luhnLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/lengthLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardNumberLabel"
                android:text="@string/luhnLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lengthLabel"
                android:textStyle="bold"
                tools:text="16" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/luhn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/luhnLabel"
                app:layout_constraintTop_toBottomOf="@id/luhnLabel"
                tools:text="@string/yes" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_span="2"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countryLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryIconAndName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="🇩🇰 Denmark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="(latitude: 56, longitude: 10)" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Number: 204" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryShortcut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Shortcut: DK" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/countryCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Currency: DKK" />
        </LinearLayout>
    </TableRow>
</TableLayout>