<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.CurrentCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layoutPadding">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/binNumberField"
            android:text="@string/binLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/binNumberField"
            style="?attr/textInputFilledDenseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/searchButton"
            app:startIconDrawable="@drawable/ic_baseline_account_balance_24"
            app:startIconContentDescription="@string/binInputHint"
            android:hint="@string/binInputHint"
            app:helperText="@string/binInputHelper"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconContentDescription="@string/clearInputButtonText"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addButton"
            app:layout_constraintTop_toBottomOf="@id/binNumberField"
            app:layout_constraintBottom_toTopOf="@id/topDivider"
            app:icon="@drawable/ic_baseline_search_24"
            android:text="@string/searchCardButtonText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toEndOf="@id/searchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/searchButton"
            app:icon="@drawable/ic_baseline_save_24"
            android:text="@string/saveCardButtonText" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchButton"
            app:layout_constraintBottom_toTopOf="@id/infoTitle"
            app:dividerThickness="@dimen/dividerBigThickness" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/infoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topDivider"
            app:layout_constraintBottom_toTopOf="@id/cardInfo"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:text="@string/currentCardInfoLabel" />

        <include
            android:id="@+id/cardInfo"
            layout="@layout/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoTitle"
            app:layout_constraintBottom_toTopOf="@id/bottomDivider" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenItems"
            android:layout_marginBottom="@dimen/marginBetweenItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:dividerThickness="@dimen/dividerBigThickness" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
